--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="Team Card 1.png" alt="Mark Guerrero" />
+                    <img src="img-1.webp" alt="Mark Guerrero" width="264" height="260" />
                     <h3>Mark Guerrero</h3>
                     <p>Prodact Desinger</p>
                 </li>
                 <li>
-                    <img src="Team Card 2.png" alt="Tom Ford" />
+                    <img src="img-2.webp" alt="Tom Ford" width="264" height="260" />
                     <h3>Tom Ford</h3>
                     <p>Fronted Developer</p>
                 </li>
                 <li>
-                    <img src="Team Card 3.png" alt="Camila Garcia" />
+                    <img src="img-3.webp" alt="Camila Garcia" width="264" height="260" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="Team Card 4.png" alt="Daniel Wilson" />
+                    <img src="img-4.webp" alt="Daniel Wilson" width="264" height="260" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
