--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <li>Studio</li>
-                <li>Portfolio</li>
-                <li>Contacts</li>
+                <li>
+                    <a href="">Studio</a>
+                </li>
+                <li>
+                    <a href="">Portfolio</a>
+                </li>
+                <li>
+                    <a href="">Contacts</a>
+                </li>
             </ul>
         </nav>  
         <address>
@@ -66,22 +72,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="img-1.webp" alt="Mark Guerrero" width="264" height="260" />
+                    <img src="./images/team-1.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Prodact Desinger</p>
                 </li>
                 <li>
-                    <img src="img-2.webp" alt="Tom Ford" width="264" height="260" />
+                    <img src="./images/team-2.jpg" alt="Tom Ford" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Fronted Developer</p>
                 </li>
                 <li>
-                    <img src="img-3.webp" alt="Camila Garcia" width="264" height="260" />
+                    <img src="./images/team-3.jpg" alt="Camila Garcia" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="img-4.webp" alt="Daniel Wilson" width="264" height="260" />
+                    <img src="./images/team-4.jpg" alt="Daniel Wilson" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
