--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
 
     <main>
         <section>
-            <h1>Effective Solutions for Your Bussiness</h1>
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
 
         <section>
+            <h2>Benefits</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -50,7 +51,7 @@
                 <li>
                     <h3>Punctuality</h3>
                     <p>
-                        Bring the key message to the brand`s audience for the best price within the shortest possible time.
+                        Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li>
@@ -74,12 +75,12 @@
                 <li>
                     <img src="./images/team-1.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3>Mark Guerrero</h3>
-                    <p>Prodact Desinger</p>
+                    <p>Product Desinger</p>
                 </li>
                 <li>
                     <img src="./images/team-2.jpg" alt="Tom Ford" width="264" height="260">
                     <h3>Tom Ford</h3>
-                    <p>Fronted Developer</p>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/team-3.jpg" alt="Camila Garcia" width="264" height="260">
