--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <li>
                     <img src="./images/team-1.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3>Mark Guerrero</h3>
-                    <p>Product Desinger</p>
+                    <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/team-2.jpg" alt="Tom Ford" width="264" height="260">
